--- a/index.html
+++ b/index.html
@@ -15,12 +15,30 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div data-view="entry-form">
-
-  </div>
   <header>
+
   </header>
   <main>
+    <div class="container" data-view="entry-form">
+      <form>
+        <h1>New Entry</h1>
+        <div class="row">
+          <div class="column-full column-half">
+            <img src="images/placeholder-image-square.jpg">
+          </div>
+          <div class="column-full column-half">
+            <h3>Title</h3>
+            <input type="text">
+            <h3>Photo URL</h3>
+            <input type="text">
+          </div>
+        </div>
+        <div class="row">
+          <h3>Notes</h3>
+          <input type="text-area">
+        </div>
+      </form>
+    </div>
   </main>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
