Make all inputs of the journal entry form required.

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
           </div>
           <div class="column-full column-half">
             <label class="no-top-margin font-700">Title</label>
-            <input class="gray-border" type="text">
+            <input class="gray-border" type="text" required="required">
             <label class="font-700">Photo URL</label>
-            <input class="gray-border" type="text">
+            <input class="gray-border" type="text" required="required">
           </div>
         </div>
         <div class="row">
           <div class="column-full">
             <label class="font-700">Notes</label>
-            <textarea class="gray-border" > </textarea>
+            <textarea class="gray-border" required="required"> </textarea>
           </div>
           <div class="column-full text-right">
             <button class="purple-bg save-button">SAVE</button>
