Listen for 'submit' events on the journal entry form

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <textarea class="gray-border" name="notes" required="required"></textarea>
           </div>
           <div class="column-full text-right">
-            <button class="purple-bg save-button">SAVE</button>
+            <button class="purple-bg save-button" type="submit">SAVE</button>
           </div>
         </div>
       </form>
