Verify that each new entry receives an incrementing entryId.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="icon" href="images/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&family=Proza+Libre&display=swap"
+    rel="stylesheet">
   <link
     rel="stylesheet"
     crossorigin="anonymous"
@@ -22,7 +23,7 @@
     <div class="container">
       <div class="row">
         <div class="column-full column-half">
-          <h2 class="font-300 tb-margin-dot5">Code Journal</h2>
+          <h2 class="font-200 tb-margin-dot5">Code Journal</h2>
         </div>
       </div>
     </div>
@@ -32,20 +33,20 @@
       <form>
         <h1 class="column-full">New Entry</h1>
         <div class="row">
-          <div class="column-full column-half">
+          <div class="column-half tb-margin-dot5">
             <img src="images/placeholder-image-square.jpg">
           </div>
-          <div class="column-full column-half">
+          <div class="column-half tb-margin-dot5">
             <label class="no-top-margin font-700" for="title">Title</label>
-            <input class="gray-border" type="text" name="title" required="required">
+            <input class="text-boxes" type="text" name="title" required="required">
             <label class="font-700" for="photo">Photo URL</label>
-            <input id="photo" class="gray-border" type="text" name="photo" required="required">
+            <input id="photo" class="text-boxes" type="text" name="photo" required="required">
           </div>
         </div>
         <div class="row">
           <div class="column-full">
             <label class="font-700" for="notes">Notes</label>
-            <textarea class="gray-border" name="notes" required="required"></textarea>
+            <textarea class="text-boxes" name="notes" required="required"></textarea>
           </div>
           <div class="column-full text-right">
             <button class="purple-bg save-button" type="submit">SAVE</button>
