--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="row">
         <div class="column-full column-half">
-          <h2 class="font-200 tb-margin-dot5">Code Journal</h2>
+          <h2 class="font-200 tb-margin-dot7">Code Journal</h2>
         </div>
       </div>
     </div>
@@ -33,10 +33,10 @@
       <form>
         <h1 class="column-full">New Entry</h1>
         <div class="row">
-          <div class="column-half tb-margin-dot5">
+          <div class="column-half b-margin">
             <img src="images/placeholder-image-square.jpg">
           </div>
-          <div class="column-half tb-margin-dot5">
+          <div class="column-half">
             <label class="no-top-margin font-700" for="title">Title</label>
             <input class="text-boxes" type="text" name="title" required="required">
             <label class="font-700" for="photo">Photo URL</label>
