--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         </div>
       </form>
     </div>
+    <div data-view="entries">
+      <ul>
+
+      </ul>
+    </div>
   </main>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
