--- a/index.html
+++ b/index.html
@@ -57,40 +57,35 @@
       </div>
       <div data-view="entries">
         <ul>
-          <li>
+          <li class="b-margin">
             <div class="row">
               <div class="column-half b-margin">
                 <img src="images/placeholder-image-square.jpg">
               </div>
               <div class="column-half">
-                <h2>Title</h2>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur quos repudiandae unde quaerat quae.
+                <h2 class="b-margin no-top-margin">Title</h2>
+                <p class="b-margin no-top-margin">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur quos repudiandae unde quaerat quae.
                 Unde
                 saepe hic quibusdam, veniam laborum enim nesciunt at blanditiis beatae consectetur voluptate est aliquid rem!
                 Ipsam ea quis ducimus! Nisi mollitia impedit cupiditate odio veritatis excepturi nihil sapiente labore
-                necessitatibus animi, consequatur sequi inventore nostrum dicta libero, quibusdam illum recusandae
-                consequuntur cum
-                vitae tempore quas.
+                neces
                 </p>
               </div>
             </div>
           </li>
           <li>
             <div class="row">
-              <div class="column-half">
+              <div class="column-half b-margin">
                 <img src="images/placeholder-image-square.jpg">
               </div>
               <div class="column-half">
-                <h2>Title 2</h2>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur quos repudiandae unde quaerat quae.
-                Unde
-                saepe hic quibusdam, veniam laborum enim nesciunt at blanditiis beatae consectetur voluptate est aliquid rem!
-                Ipsam ea quis ducimus! Nisi mollitia impedit cupiditate odio veritatis excepturi nihil sapiente labore
-                necessitatibus animi, consequatur sequi inventore nostrum dicta libero, quibusdam illum recusandae
-                consequuntur
-                cum
-                vitae tempore quas.
+                <h2 class="b-margin no-top-margin">Title 2</h2>
+                <p class="b-margin no-top-margin">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur quos repudiandae unde quaerat quae.
+                  Unde
+                  saepe hic quibusdam, veniam laborum enim nesciunt at blanditiis beatae consectetur voluptate est aliquid rem!
+                  Ipsam ea quis ducimus! Nisi mollitia impedit cupiditate odio veritatis excepturi nihil sapiente labore
+                  necessitatibus an
+                </p>
               </div>
             </div>
           </li>
