Add a navigation item to the navbar for Entries.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 <body>
   <header class="purple-bg">
     <div class="container">
-      <div class="row">
-        <div class="column-full column-half">
-          <h2 class="font-200 tb-margin-dot7">Code Journal</h2>
-        </div>
+      <div class="row align-center gap-20">
+        <h2 class="font-200 tb-margin-dot7">Code Journal</h2>
+        <h3 class="font-200 tb-margin-dot7">Entries</h3>
       </div>
     </div>
   </header>
@@ -55,10 +54,8 @@
           </div>
         </form>
       </div>
-      <div data-view="entries">
-        <ul>
-
-        </ul>
+      <div id="entries" data-view="entries">
+        <ul></ul>
       </div>
     </div>
     </div>
