--- a/index.html
+++ b/index.html
@@ -21,15 +21,19 @@
 <body>
   <header class="purple-bg">
     <div class="container">
-      <div class="row align-center gap-20">
-        <h2 class="font-200 tb-margin-dot7">Code Journal</h2>
-        <h3 class="font-200 tb-margin-dot7">Entries</h3>
+      <div class="column-full">
+        <div class="row align-center gap-20">
+          <h2 class="font-200 tb-margin-dot7">Code Journal</h2>
+          <h3 class="font-200 tb-margin-dot7">
+            <a href="#entries" class="purple-bg">Entries</a>
+          </h3>
+        </div>
       </div>
     </div>
   </header>
   <main>
     <div class="container">
-      <div data-view="entry-form">
+      <div id="entry-form" data-view="entry-form" class="hidden">
         <form>
           <h1 class="column-full">New Entry</h1>
           <div class="row">
@@ -49,12 +53,20 @@
               <textarea class="text-boxes" name="notes" required="required"></textarea>
             </div>
             <div class="column-full text-right">
-              <button class="purple-bg save-button" type="submit">SAVE</button>
+              <button id="save" class="purple-bg save-button" type="submit">SAVE</button>
             </div>
           </div>
         </form>
       </div>
       <div id="entries" data-view="entries">
+        <div class="row relative space-between align-center">
+          <div class="column-full">
+            <h1>Entries</h1>
+          </div>
+          <div class="column-full text-right absolute">
+            <a class="save-button purple-bg" href="#entry-form">New</a>
+          </div>
+        </div>
         <ul></ul>
       </div>
     </div>
