Ensure that refreshing the pages shows the same view as before refreshing.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="row align-center gap-20">
           <h2 class="font-200 tb-margin-dot7">Code Journal</h2>
           <h3 class="font-200 tb-margin-dot7">
-            <a href="#entries" class="purple-bg">Entries</a>
+            <a id="entriesNav" href="#" class="purple-bg">Entries</a>
           </h3>
         </div>
       </div>
@@ -58,13 +58,13 @@
           </div>
         </form>
       </div>
-      <div id="entries" data-view="entries">
+      <div data-view="entries">
         <div class="row relative space-between align-center">
           <div class="column-full">
             <h1>Entries</h1>
           </div>
           <div class="column-full text-right absolute">
-            <a class="save-button purple-bg" href="#entry-form">New</a>
+            <a id="new" class="save-button purple-bg" href="#">New</a>
           </div>
         </div>
         <ul></ul>
