Clean up all unnecessary styling.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </form>
       </div>
       <div data-view="entries">
-        <div class="row relative space-between align-center">
+        <div class="row relative align-center">
           <div class="column-full">
             <h1>Entries</h1>
           </div>
