removed some unnecessary css

--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
 <body>
   <header class="purple-bg">
     <div class="container">
-      <div class="column-full">
-        <div class="row align-center gap-20">
-          <h2 class="font-200 tb-margin-dot7">Code Journal</h2>
-          <h3 class="font-200 tb-margin-dot7">
-            <a id="entriesNav" href="#" class="purple-bg">Entries</a>
-          </h3>
-        </div>
+      <div class="row align-center gap-20 column-full">
+        <h2 class="font-200 tb-margin-1">Code Journal</h2>
+        <h3 class="font-200 tb-margin-1">
+          <a id="entriesNav" href="#" class="purple-bg">Entries</a>
+        </h3>
       </div>
     </div>
   </header>
