Pre-populate the entry form with the clicked entry's values from the object found in the data model.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="column-half">
               <label class="no-top-margin font-700" for="title">Title</label>
-              <input class="text-boxes" type="text" name="title" required="required">
+              <input id="title" class="text-boxes" type="text" name="title" required="required">
               <label class="font-700" for="photo">Photo URL</label>
               <input id="photo" class="text-boxes" type="text" name="photo" required="required">
             </div>
@@ -48,7 +48,7 @@
           <div class="row">
             <div class="column-full">
               <label class="font-700" for="notes">Notes</label>
-              <textarea class="text-boxes" name="notes" required="required"></textarea>
+              <textarea id="notes" class="text-boxes" name="notes" required="required"></textarea>
             </div>
             <div class="column-full text-right">
               <button id="save" class="purple-bg save-button" type="submit">SAVE</button>
