Add a click target for deleting an entry to the entry form that only appears if the user is editing an entry.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
               <label class="font-700" for="notes">Notes</label>
               <textarea id="notes" class="text-boxes" name="notes" required="required"></textarea>
             </div>
+          </div>
+          <div class="row relative align-center">
+            <div id="delete-button" class="column-full absolute">
+              <button>Delete Entry</button>
+            </div>
             <div class="column-full text-right">
               <button id="save" class="purple-bg save-button" type="submit">SAVE</button>
             </div>
