--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
           </div>
           <div class="row align-center relative">
-            <div id="delete-button" class="column-half absolute">
+            <div id="delete-button" class="column-half absolute hidden">
               <button>Delete Entry</button>
             </div>
             <div class="column-full text-right">
@@ -58,12 +58,12 @@
             </div>
           </div>
         </form>
-        <div id="confirm-delete" class="row center dark-bg hidden">
+        <div id="confirm-popup" class="row center dark-bg hidden">
           <div class="center confirm-popup">
             <p>Are you sure you want to delete this entry?</p>
             <div class="row space-between align-center">
-              <button class="save-button">CANCEL</button>
-              <button class="save-button red-bg" type="submit">CONFIRM</button>
+              <button id="cancel" class="save-button">CANCEL</button>
+              <button id="confirm-delete" class="save-button red-bg" type="submit">CONFIRM</button>
             </div>
           </div>
         </div>
